--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -59,220 +59,21 @@
 
 		<!-- Page Content  -->
 		<div id="content">
-			<nav th:fragment="sidebar"
-				class="navbar navbar-expand-lg navbar-light"
-				style="border-bottom: 4px solid #7386D5;">
-				<div class="container-fluid">
-					<button type="button" id="sidebarCollapse"
-						class="btn btn-info mr-4">
-						<i class="fas fa-align-left"></i>
-						<!-- <span>Toggle Sidebar</span> -->
-					</button>
-					<form class="form-inline frm">
-						<input class="form-control mr-sm-2" type="search"
-							placeholder="Search" aria-label="Search">
-						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-					</form>
-					<button class="btn btn-light d-inline-block d-lg-none ml-auto"
-						type="button" data-toggle="collapse"
-						data-target="#navbarSupportedContent"
-						aria-controls="navbarSupportedContent" aria-expanded="false"
-						aria-label="Toggle navigation">
-						<i class="fas fa-align-justify"></i>
-					</button>
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="nav navbar-nav ml-auto">
-							<li class="nav-item"><a class="nav-link fl1" href="#"> <i
-									class="fas fa-cart-plus" title="View Cart"
-									style="color: red; font-size: 20px"></i><span class="label">10</span>
-							</a></li>
-							<li class="nav-item"><a class="nav-link fl2" href="#"> <i
-									class="fa fa-user" style="color: #17a2b8; font-size: 20px"></i>
-							</a></li>
-
-						</ul>
-					</div>
-				</div>
+			<nav th:replace="index :: topBar">
+				
 			</nav>
 			<div class="line"></div>
 			<div class="container" id="app">
 
 				<div class="row g-2">
-					<div class="col-md-3">
-						<div class="accordion" id="accordionExample">
-							<div class="card">
-								<div class="card-header" id="headingOne">
-									<h2 class="mb-0">
-										<button
-											class="btn btn-link btn-block text-left text-uppercase"
-											type="button" data-toggle="collapse"
-											data-target="#collapseOne" aria-expanded="true"
-											aria-controls="collapseOne">Categories</button>
-									</h2>
-								</div>
-
-								<div id="collapseOne" class="collapse show"
-									aria-labelledby="headingOne" data-parent="#accordionExample">
-									<div class="card-body category">
-										<div class="t-products p-2">
-											<div class="p-lists">
-												<div class="d-flex justify-content-between mt-2">
-													<span>Laptops</span> <span>23</span>
-												</div>
-												<div class="d-flex justify-content-between mt-2">
-													<span>Desktops</span> <span>46</span>
-												</div>
-												<div class="d-flex justify-content-between mt-2">
-													<span>Monitors</span> <span>13</span>
-												</div>
-												<div class="d-flex justify-content-between mt-2">
-													<span>Mouse</span> <span>33</span>
-												</div>
-												<div class="d-flex justify-content-between mt-2">
-													<span>Keyboard</span> <span>12</span>
-												</div>
-												<div class="d-flex justify-content-between mt-2">
-													<span>Printer</span> <span>53</span>
-												</div>
-												<div class="d-flex justify-content-between mt-2">
-													<span>Mobiles</span> <span>203</span>
-												</div>
-												<div class="d-flex justify-content-between mt-2">
-													<span>CPU</span> <span>23</span>
-												</div>
-											</div>
-										</div>
-
-									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingTwo">
-									<h2 class="mb-0">
-										<button
-											class="btn btn-link btn-block text-left collapsed text-uppercase"
-											type="button" data-toggle="collapse"
-											data-target="#collapseTwo" aria-expanded="false"
-											aria-controls="collapseTwo">Brands</button>
-									</h2>
-								</div>
-								<div id="collapseTwo" class="collapse"
-									aria-labelledby="headingTwo" data-parent="#accordionExample">
-									<div class="card-body category">
-										<div class="brand p-2">
-											<div class="d-flex justify-content-between mt-2">
-												<div class="form-check">
-													<input class="form-check-input" type="checkbox" value=""
-														id="flexCheckDefault"> <label
-														class="form-check-label" for="flexCheckDefault">
-														Apple </label>
-												</div>
-												<span>13</span>
-											</div>
-											<div class="d-flex justify-content-between mt-2">
-												<div class="form-check">
-													<input class="form-check-input" type="checkbox" value=""
-														id="flexCheckChecked" checked> <label
-														class="form-check-label" for="flexCheckChecked">
-														Asus </label>
-												</div>
-												<span>4</span>
-											</div>
-											<div class="d-flex justify-content-between mt-2">
-												<div class="form-check">
-													<input class="form-check-input" type="checkbox" value=""
-														id="flexCheckChecked" checked> <label
-														class="form-check-label" for="flexCheckChecked">
-														Dell </label>
-												</div>
-												<span>24</span>
-											</div>
-											<div class="d-flex justify-content-between mt-2">
-												<div class="form-check">
-													<input class="form-check-input" type="checkbox" value=""
-														id="flexCheckChecked" checked> <label
-														class="form-check-label" for="flexCheckChecked">
-														Lenovo </label>
-												</div>
-												<span>18</span>
-											</div>
-											<div class="d-flex justify-content-between mt-2">
-												<div class="form-check">
-													<input class="form-check-input" type="checkbox" value=""
-														id="flexCheckChecked" checked> <label
-														class="form-check-label" for="flexCheckChecked">
-														Acer </label>
-												</div>
-												<span>44</span>
-											</div>
-										</div>
-
-									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingThree">
-									<h2 class="mb-0">
-										<button
-											class="btn btn-link btn-block text-left collapsed text-uppercase"
-											type="button" data-toggle="collapse"
-											data-target="#collapseThree" aria-expanded="false"
-											aria-controls="collapseThree">Filters</button>
-									</h2>
-								</div>
-								<div id="collapseThree" class="collapse"
-									aria-labelledby="headingThree" data-parent="#accordionExample">
-									<div class="card-body">
-										<div class="type p-2 mb-2">
-
-											<div class="d-flex justify-content-between mt-2">
-												<form action="search" method="get">
-													<p class="text-uppercase">filtre by gategory</p>
-													<div class="mb-3">
-														<div class="form-group">
-															<input type="text" class="form-control-sm is-valid"
-																name="action" value="byCategoryCretiria" hidden="hidden" />
-
-															<input type="text" class="form-control-sm input-filter"
-																placeholder="category" id="exampleInputEmail1"
-																name="creteria" />
-														</div>
-													</div>
-
-													<button type="submit"
-														class="btn btn-outline-success btn-sm form-control">search</button>
-												</form>
-											</div>
-											<div class="d-flex justify-content-between mt-4">
-												<form action="search" method="get">
-													<p class="text-uppercase">fillter by price</p>
-													<div class="form-group">
-
-														<input type="text" class="form-control-sm input-filter"
-															name="action" hidden="hidden" value="Byprice" />
-														<div class="form-group">
-															<input type="number" class="form-control-sm input-filter"
-																name="price" placeholder="price" />
-														</div>
-													</div>
-													<button type="submit"
-														class="btn btn-outline-success btn-sm form-control">search</button>
-												</form>
-											</div>
-
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+					<div class="row g-2">
+					<div class="col-md-3" th:replace="index :: generalSection">
+						
 					</div>
 
 					<div class="col-md-9">
 
 						<div class="row g-2">
-						
-						
-						
 						
 							<div class="col-md-6">
 								<div id="carouselExampleControls" class="carousel slide"
